sets app to latest

--- a/playbooks/blue.yaml
+++ b/playbooks/blue.yaml
@@ -15,4 +15,4 @@
       apt: name=apache2 state=present
 
     - name: Install our application
-      apt: name=todoapp state=present
+      apt: name=todoapp state=latest
