--- a/playbooks/blue.yaml
+++ b/playbooks/blue.yaml
@@ -16,3 +16,6 @@
 
     - name: Install our application
       apt: name=todoapp state=latest
+
+    - name: restart apache
+      service: name=apache2 state=restarted
