--- a/playbooks/blue.yaml
+++ b/playbooks/blue.yaml
@@ -19,3 +19,7 @@
 
     - name: restart apache
       service: name=apache2 state=restarted
+
+    - name: add blue to load balancer
+      local_action:
+        command: aws autoscaling attach-load-balancers --auto-scaling-group-name "cd_course_blue_asg" --load-balancer-names "cd-course-load-balancer"
