adjust blue script

--- a/playbooks/blue.yaml
+++ b/playbooks/blue.yaml
@@ -21,5 +21,8 @@
       service: name=apache2 state=restarted
 
 
-- name: add blue to load balancer
-  local_action: command aws autoscaling attach-load-balancers --auto-scaling-group-name "cd_course_blue_asg" --load-balancer-names "cd-course-load-balancer" --region us-west-2
+- hosts: 127.0.0.1
+  connection: local
+  tasks:
+    - name: add blue to load balancer
+      local_action: command aws autoscaling attach-load-balancers --auto-scaling-group-name "cd_course_blue_asg" --load-balancer-names "cd-course-load-balancer" --region us-west-2
