adds new playbook

--- a/playbooks/green.yaml
+++ b/playbooks/green.yaml
@@ -26,5 +26,7 @@
   tasks:
     - name: add green to load balancer
       local_action: command aws autoscaling attach-load-balancers --auto-scaling-group-name "cd_course_green_asg" --load-balancer-names "cd-course-load-balancer" --region us-west-2
+
     - name: remove blue from load balancer
       local_action: command aws autoscaling detach-load-balancers --auto-scaling-group-name "cd_course_blue_asg" --load-balancer-names "cd-course-load-balancer" --region us-west-2
+      ignore_errors: yes
