adjusts test runner

--- a/playbooks/test_runner.yaml
+++ b/playbooks/test_runner.yaml
@@ -2,5 +2,6 @@
   hosts: tag_environment_{{ environment }}
   become: true
   tasks:
-    - name: list hosts in {{ environment }}
-      debug: var=play_hosts
+    - name:
+      command: phantomjs ./tests/acceptance.js {{ item }}
+      with_items: play_hosts
