adjusts test runner

--- a/playbooks/test_runner.yaml
+++ b/playbooks/test_runner.yaml
@@ -2,6 +2,6 @@
   hosts: tag_environment_{{ environment_name }}
   become: true
   tasks:
-    - name: run phantomjs {{ environment_name }} 
+    - name: run phantomjs {{ environment_name }}
       local_action: command phantomjs ./tests/acceptance.js {{ item }}
-      with_items: play_hosts
+      with_items: {{ play_hosts | default([]) }} 
